fix the mypy import errors, move stuff to a common place, rename the exception base class
